# carno-ws

./: .gitignore  Cargo.toml  Dockerfile  Program.cs  README.md  _Imports.razor  carno-ws.csproj  carno-ws.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
Data/: WSClient.cs  WSMessage.cs  WSServer.cs  WeatherForecast.cs  WeatherForecastService.cs
Pages/: Counter.razor  Error.cshtml  Error.cshtml.cs  FetchData.razor  Index.razor  WebSocket.razor  _Host.cshtml
Properties/: launchSettings.json
Shared/: CounterChild.razor  MainLayout.razor  NavMenu.razor  SendMessageDialog.razor  WSClientList.razor
src/: App.vue  app.rs  main.js  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Clients.vue  Message.vue  clients.js
templates/: index.html
ui/: index.html
wwwroot/css/: site.css
wwwroot/js/: site.js
