[package]
name = "carno-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-tungstenite = { version = "0.21.0", features = ["tokio-rustls-webpki-roots"] }
iced = { version = "0.9.0", features = ["canvas", "tokio", "debug"] }
iced_futures = "0.6.0"
iced_lazy = "0.6.1"
iced_native = "0.10.1"
once_cell = "1.17.1"
tokio = "1.27.0"
warp = "0.3.4"
