[package]
name = "carno-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-tungstenite = { version = "0.21.0", features = [
    "tokio-rustls-webpki-roots",
] }
chrono = "0.4.24"
env_logger = "0.10.0"
iced = { version = "0.9.0", features = [
    "async-std",
    "canvas",
    "tokio",
    "debug",
] }
iced_futures = "0.6.0"
iced_lazy = "0.6.1"
iced_native = "0.10.1"
log = "0.4.17"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
tokio = "1.27.0"
warp = "0.3.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"
